--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -1,6 +1,35 @@
-<app-progresso></app-progresso>
-<app-tentativas></app-tentativas>
+<div class="container">
+    <div class="jumbotron">
+        <div class="row">
+            <div class="col-sm-6">
+                <app-progresso></app-progresso>
+            </div>
+            <div class="col-sm-6">
+                <div class="d-flex justify-content-end">
+                    <app-tentativas></app-tentativas>
+                </div>
+                
+            </div>
+        </div>
 
-<button class="btn btn-primary">teste</button>
+        <div class="row">
+            <div class="col">
+                <h6>Traduza a frase</h6>
+                <p>{{ frases[0].fraseEng }}</p>
+    
+                <div class="form-group">
+                    <textarea class="form-control" rows="3"></textarea>
+                </div>
+            </div>
+        </div>
 
-<p>Componente painel</p>
+        <div class="row">
+            <div class="col">
+                <div class="d-flex justify-content-end">
+                    <button type="button" class="btn btn-primary">Verificar</button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
