--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -2,7 +2,7 @@
     <div class="jumbotron">
         <div class="row">
             <div class="col-sm-6">
-                <app-progresso></app-progresso>
+                <app-progresso [progresso]="progresso"></app-progresso>
             </div>
             <div class="col-sm-6">
                 <div class="d-flex justify-content-end">
@@ -15,10 +15,16 @@
         <div class="row">
             <div class="col">
                 <h6>Traduza a frase</h6>
-                <p>{{ frases[0].fraseEng }}</p>
+                <p>{{ rodadaFrase.fraseEng }}</p>
     
                 <div class="form-group">
-                    <textarea class="form-control" rows="3"></textarea>
+                    <textarea 
+                        class="form-control" 
+                        rows="3"
+                        (input)="atualizaResposta($event)"
+                    >
+                    
+                    </textarea>
                 </div>
             </div>
         </div>
@@ -26,7 +32,7 @@
         <div class="row">
             <div class="col">
                 <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-primary">Verificar</button>
+                    <button type="button" class="btn btn-primary" (click)="verificaResposta()" >Verificar</button>
                 </div>
             </div>
         </div>
