--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -22,6 +22,7 @@
                         class="form-control" 
                         rows="3"
                         (input)="atualizaResposta($event)"
+                        [value]="resposta"
                     >
                     
                     </textarea>
