--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,27 @@
 <app-topo></app-topo>
-<app-painel (encerrarJogo)="encerrarJogo($event)"></app-painel>
+<div *ngIf="jogoEmAndamento; else fimDeJogo">
+  <app-painel (encerrarJogo)="encerrarJogo($event)"></app-painel>
+</div>
+<ng-template #fimDeJogo>
+  <div *ngIf="tipoEncerramento === 'derrota'; else fimDeJogoVitoria" class="container" style="margin-top: 50px;">
+    <div class="row">
+      <div class="col">
+        <h3 style="color: red;">Fim de jogo, infelizmente você perdeu :S</h3>
+        <button class="btn btn-primary" (click)="reiniciarJogo()">Reiniciar Jogo</button>
+      </div>
+    </div>
+  </div>
+</ng-template>
+<ng-template #fimDeJogoVitoria>
+  <div class="container" style="margin-top: 50px;">
+    <div class="row">
+      <div class="col">
+        <h3 style="color: green;">Fim de jogo, você ganhou :D</h3>
+      </div>
+    </div>
+  </div>
+</ng-template>
+<!--<mat-form-field>
+    <input matInput [matDatepicker]="myDatepicker">
+    <mat-datepicker #myDatepicker></mat-datepicker>
+  </mat-form-field>-->
